# aws-json-dataset

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-test.txt  setup.py  tox.ini
.github/workflows/: run_tests.yml
awsjsondataset/: __init__.py  aws_json_dataset.py  constants.py  exceptions.py  models.py  utils.py
awsjsondataset/aws/: models.py  utils.py
tests/: fixtures.py  test_models.py  test_utils.py
tests/aws/: test_aws_models.py  test_aws_utils.py
