[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]

[tool.setuptools_scm]
write_to = "awsjsondataset/_version.py"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = "True"

[tool.mypy]
files = ["awsjsondataset"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["awsjsondataset"]
