[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["awsjsondataset"]

[tool.setuptools_scm]
write_to = "awsjsondataset/_version.py"

[project]
name = "aws-json-dataset"
version = "0.1.0"
description = "Send JSON datasets to various AWS services."
authors = [{ name = "Gregory Lindsey", email = "gclindsey@gmail.com" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["aws", "json", "dataset", "s3", "kinesis", "firehose", "sqs", "data", "streaming", "data engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON"
]
dependencies = [
    "boto3>=1.20"
]

[project.optional-dependencies]
dev = [
    "black>=21.12",
]
test = [
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "coverage~=7.2.7",
    "black~=23.1.0",
    "boto3~=1.28.20",
    "moto[sqs,sns,firehose,s3,sts]~=4.1.14",
]

[tool.black]
line-length = 79
target-version = ['py310']
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["awsjsondataset"]